--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,6 +38,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16"
   }
 }
